--- a/GNUmakefile.am
+++ b/GNUmakefile.am
@@ -26,7 +26,8 @@ noinst_HEADERS = \
 	include/linux/errqueue.h \
 	include/linux/kernel.h \
 	include/linux/net_tstamp.h \
-	include/linux/netlink.h
+	include/linux/netlink.h \
+	mcp251xfd/mcp251xfd.h
 
 noinst_LTLIBRARIES = \
 	libcan.la \
@@ -39,14 +40,17 @@ libcan_la_SOURCES = \
 libj1939_la_SOURCES = \
 	libj1939.c
 
+mcp251xfd_crc16_SOURCES = \
+	mcp251xfd/mcp251xfd-crc16.c \
+	mcp251xfd/mcp251xfd-crc16-main.c
+
 mcp251xfd_dump_SOURCES = \
 	mcp251xfd/mcp251xfd-dev-coredump.c \
 	mcp251xfd/mcp251xfd-dump-userspace.h \
 	mcp251xfd/mcp251xfd-dump.c \
 	mcp251xfd/mcp251xfd-dump.h \
 	mcp251xfd/mcp251xfd-main.c \
-	mcp251xfd/mcp251xfd-regmap.c \
-	mcp251xfd/mcp251xfd.h
+	mcp251xfd/mcp251xfd-regmap.c
 
 bin_PROGRAMS = \
 	asc2log \
@@ -75,6 +79,7 @@ bin_PROGRAMS = \
 	j1939sr \
 	log2asc \
 	log2long \
+	mcp251xfd-crc16 \
 	mcp251xfd-dump \
 	slcan_attach \
 	slcand \
